include_HEADERS = \
	libbde.h

pkginclude_HEADERS = \
	libbde/codepage.h \
	libbde/definitions.h \
	libbde/error.h \
	libbde/extern.h \
	libbde/features.h \
	libbde/types.h

EXTRA_DIST = \
	libbde.h.in \
	libbde/definitions.h.in \
	libbde/features.h.in \
	libbde/types.h.in

DISTCLEANFILES = \
	libbde.h \
	libbde/definitions.h \
	libbde/features.h \
	libbde/types.h \
	Makefile \
	Makefile.in

