EXTRA_DIST = \
	libbde.pmdoc/01bin.xml.in \
	libbde.pmdoc/01bin-contents.xml \
	libbde.pmdoc/02include.xml.in \
	libbde.pmdoc/02include-contents.xml \
	libbde.pmdoc/03lib.xml.in \
	libbde.pmdoc/03lib-contents.xml \
	libbde.pmdoc/04share.xml.in \
	libbde.pmdoc/04share-contents.xml \
	libbde.pmdoc/05python.xml.in \
	libbde.pmdoc/05python-contents.xml \
	libbde.pmdoc/index.xml \
	libbde.pmdoc/index.xml.in \
	Introduction.rtf \
	Introduction.rtf.in \
	License.rtf \
	Readme.rtf

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f libbde.pmdoc/01bin.xml
	/bin/rm -f libbde.pmdoc/02include.xml
	/bin/rm -f libbde.pmdoc/03lib.xml
	/bin/rm -f libbde.pmdoc/04share.xml
	/bin/rm -f libbde.pmdoc/05python.xml
	/bin/rm -f libbde.pmdoc/index.xml
	/bin/rm -f Introduction.rtf
	/bin/rm -f Makefile

