MSVSCPP_FILES = \
	bde_test_error/bde_test_error.vcproj \
	bde_test_get_version/bde_test_get_version.vcproj \
	bde_test_open_close/bde_test_open_close.vcproj \
	bde_test_read/bde_test_read.vcproj \
	bde_test_seek/bde_test_seek.vcproj \
	bdeinfo/bdeinfo.vcproj \
	bdemount/bdemount.vcproj \
	dokan/dokan.vcproj \
	libbde/libbde.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcstring/libcstring.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pybde/pybde.vcproj \
	libbde.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

