MSVSCPP_FILES = \
	bde_test_aes_ccm_encrypted_key/bde_test_aes_ccm_encrypted_key.vcproj \
	bde_test_encryption_context/bde_test_encryption_context.vcproj \
	bde_test_error/bde_test_error.vcproj \
	bde_test_external_key/bde_test_external_key.vcproj \
	bde_test_io_handle/bde_test_io_handle.vcproj \
	bde_test_key/bde_test_key.vcproj \
	bde_test_key_protector/bde_test_key_protector.vcproj \
	bde_test_metadata/bde_test_metadata.vcproj \
	bde_test_metadata_block_header/bde_test_metadata_block_header.vcproj \
	bde_test_metadata_entry/bde_test_metadata_entry.vcproj \
	bde_test_metadata_header/bde_test_metadata_header.vcproj \
	bde_test_notify/bde_test_notify.vcproj \
	bde_test_password/bde_test_password.vcproj \
	bde_test_password_keep/bde_test_password_keep.vcproj \
	bde_test_sector_data/bde_test_sector_data.vcproj \
	bde_test_sector_data_vector/bde_test_sector_data_vector.vcproj \
	bde_test_stretch_key/bde_test_stretch_key.vcproj \
	bde_test_support/bde_test_support.vcproj \
	bde_test_tools_info_handle/bde_test_tools_info_handle.vcproj \
	bde_test_tools_output/bde_test_tools_output.vcproj \
	bde_test_tools_signal/bde_test_tools_signal.vcproj \
	bde_test_volume/bde_test_volume.vcproj \
	bde_test_volume_header/bde_test_volume_header.vcproj \
	bde_test_volume_master_key/bde_test_volume_master_key.vcproj \
	bdeinfo/bdeinfo.vcproj \
	bdemount/bdemount.vcproj \
	libbde/libbde.vcproj \
	libbfio/libbfio.vcproj \
	libcaes/libcaes.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfvalue/libfvalue.vcproj \
	libhmac/libhmac.vcproj \
	libuna/libuna.vcproj \
	pybde/pybde.vcproj \
	libbde.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

